[workspace]
resolver = "2"
members = [
    "contracts/zenith_vault",
    "contracts/zenith_referee",
    "contracts/zenith_shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
soroban-sdk = "26.1.0"
zenith-shared = { path = "contracts/zenith_shared" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
