[package]
name = "astraea-escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
astraea-shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
astraea-arbiter = { path = "../astraea_arbiter", features = ["testutils"] }
ed25519-dalek = "=2.2.0"
